Projects page:  - Test project image  - Project card component  - Temporary project list  - Navbar 768px screen width bug fixed  - Backdrop bug fixed  - Burger button z-index fixed  - LinkButton component change a to Link component  - Optimization H1.css  - new text-center class for aligning text in center

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .myEmail {
     display: none;
   }
@@ -26,8 +26,9 @@
     top: 0;
     left: 0;
     z-index: 1;
-    transition: all 0.3s ease;
     visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s ease;
   }
   .burgerButton {
     position: fixed;
@@ -35,6 +36,7 @@
     right: 20px;
     font-size: 1.5rem;
     display: block;
+    z-index: 1;
   }
 }
 @media screen and (min-width: 768px) {
@@ -62,9 +64,6 @@
   .myEmail {
     font-size: 1.1vw;
   }
-}
-.backdrop {
-  opacity: 0;
 }
 .navbar__desktop {
   height: 100vh;
