--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,6 @@ img {
 .w-100 {
   width: 100%;
 }
+.text-center {
+  text-align: center;
+}
